2000-06-28  Michael Meeks  <michael@helixcode.com>

	* container-menu.c (sample_app_file_menu): add a placeholder.

2000-06-26  Michael Meeks  <michael@helixcode.com>

	* container-io.c (save_component): close the streams after opening
	them [ duh ].

2000-06-24  Michael Meeks  <michael@helixcode.com>

	* container-io.c (sample_container_save): simplify logic.

	* component-io.c (component_load): add check on stream.

	* container-io.c: kill redundant prototypes.
	(open_stream): add mode flag.
	(create_stream, load_component_id ,load_component): use it.
	(load_component): free the id.
	(load_component_id_stream_read): re-write.
	(load_component_id): robustify.

2000-06-24  Michael Meeks  <michael@helixcode.com>

	* container-io.c (save_component): make it more robust.

2000-06-23  Michael Meeks  <michael@helixcode.com>

	* container-io.c (sample_container_load): use STORAGE_TYPE ("efs")
	define to help vfs switch. (sample_container_save): ditto.

2000-05-26  Dan Winship  <danw@helixcode.com>

	* component.c (load_stream_cb): 
	* component-io.c (component_load, component_save):
	Update for Bonobo_PersistStream_{load,save} changes.

2000-05-22  ERDI Gergo  <cactus@cactus.rulez.org>

	* Makefile.am (sample_container_SOURCES): Add the new sources

	* container-filesel.[ch]: Separated file request GUI (idea from
	the original `sample-container'

	* component-io.[ch]: separated component-level IO from other
	component operations

	* container-io.h: Use consts whereever possible

	* container.c (final_setup): Removed a compile-time warning, and
	renamed `a' to something more informative

2000-05-05  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_exit): kill redundant forward definitions.

2000-05-04  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_create): return the app.
	(final_setup): load files. (main): use popt for args.

2000-05-03  Michael Meeks  <michael@helixcode.com>

	* container-menu.c: update shortcut to kill clash.
